[package]
name = "rust-devtools-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-devtools-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-lsp = "0.2"
async-process = "2.3"
flume = "0.11"
# Using 0.95.1 because newer versions switched to fluent_uri which has interoperability issues
# See: https://github.com/gluon-lang/lsp-types/issues/284
# - Lacks conversion methods between Uri types
# - Missing file path handling utilities
# - No join functionality for URIs
lsp-types = "0.95.1"
axum = "0.8"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "db03f63", features = [
    "server",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
fuzzt = "0.3"
regex = "1.11"
glob = "0.3"
toml = "0.8"
shellexpand = "3.1"
notify-debouncer-mini = "0.6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
rayon = "1.8"

[profile.release]
debug = "limited"
lto = "thin"